--- a/App.config
+++ b/App.config
@@ -110,7 +110,7 @@
         <value>False</value>
       </setting>
       <setting name="Account_" serializeAs="String">
-        <value />
+        <value>ExampleUser</value>
       </setting>
       <setting name="Online_" serializeAs="String">
         <value>False</value>
@@ -174,6 +174,24 @@
       </setting>
       <setting name="ServerUrl" serializeAs="String">
         <value />
+      </setting>
+      <setting name="Buffs" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Debuffs" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="BuffsSet" serializeAs="String">
+        <value>0;0;0;0;</value>
+      </setting>
+      <setting name="DebuffsSet" serializeAs="String">
+        <value>0;0;0;0;</value>
+      </setting>
+      <setting name="Enemy" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="EnemySet" serializeAs="String">
+        <value>0;0;0;0;</value>
       </setting>
     </Crowtails.Properties.Settings>
     <Crowftails.Properties.Settings>
